--- a/src/Application/java/DictionaryApplicationScene.fxml
+++ b/src/Application/java/DictionaryApplicationScene.fxml
@@ -3,11 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="363.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <CheckBox layoutX="263.0" layoutY="173.0" mnemonicParsing="false" text="CheckBox" />
-      <Button layoutX="274.0" layoutY="114.0" mnemonicParsing="false" text="Button" />
+      <CheckBox layoutX="263.0" layoutY="235.0" mnemonicParsing="false" text="CheckBox" />
+      <Button contentDisplay="CENTER" layoutX="272.0" layoutY="170.0" mnemonicParsing="false" text="Button">
+         <font>
+            <Font name="Verdana" size="12.0" />
+         </font></Button>
    </children>
 </AnchorPane>
