--- a/src/Application/resources/CSS Styles/nord-dark.css
+++ b/src/Application/resources/CSS Styles/nord-dark.css
@@ -1979,6 +1979,7 @@ Add support for NO_HEADER tweak in tables .table-view.no-header > .column-header
 .text-area .content {
   -fx-cursor: text;
   -fx-padding: 8px 12px 8px 12px;
+  -fx-background-color: -color-input-border-focused, -color-input-bg-focused;
 }
 
 .password-field {
