--- a/src/Application/resources/FXML Files/FXML.fxml
+++ b/src/Application/resources/FXML Files/FXML.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -16,98 +17,100 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="756.0" stylesheets="@../CSS%20Styles/nord-dark.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.SceneControllerTest">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="756.0" stylesheets="@../CSS%20Styles/nord-dark.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.SceneController">
    <children>
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane prefHeight="568.0" prefWidth="756.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Tra cứu từ điển">
+          <Tab text="Tra cứu trực tuyến">
+               <content>
+                  <SplitPane dividerPositions="0.2605596620908131" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="527.0" prefWidth="757.0">
+                     <items>
+                        <ScrollPane hbarPolicy="NEVER" prefHeight="527.0" prefWidth="340.0" vbarPolicy="NEVER">
+                           <content>
+                              <VBox prefHeight="524.0" prefWidth="196.0">
+                                 <children>
+                                    <MenuButton fx:id="languageMenuButton" layoutY="50.0" mnemonicParsing="false" popupSide="LEFT" prefHeight="13.0" prefWidth="754.0" text="Tiếng Anh">
+                                       <items>
+                                          <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish" text="Tiếng Anh" />
+                                          <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese" text="Tiếng Việt" />
+                                       </items>
+                                       <effect>
+                                          <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
+                                       </effect>
+                                       <font>
+                                          <Font name="Corbel" size="20.0" />
+                                       </font>
+                                    </MenuButton>
+                                    <TextField fx:id="searchTextField" prefHeight="45.0" prefWidth="754.0" promptText="Looking for smth?...">
+                                       <font>
+                                          <Font name="Corbel" size="20.0" />
+                                       </font>
+                                    </TextField>
+                                    <Label alignment="TOP_LEFT" prefHeight="442.0" prefWidth="554.0" style="-fx-padding: 10px;" wrapText="true">
+                                       <font>
+                                          <Font name="Corbel" size="19.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </content>
+                        </ScrollPane>
+                        <ScrollPane hbarPolicy="NEVER" prefHeight="536.0" prefWidth="558.0">
+                           <content>
+                              <VBox prefHeight="527.0" prefWidth="554.0">
+                                 <children>
+                                    <Label fx:id="searchWordContent" alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="554.0">
+                                       <font>
+                                          <Font name="Corbel Bold" size="25.0" />
+                                       </font>
+                                    </Label>
+                                    <Pane prefHeight="46.0" prefWidth="554.0">
+                                       <children>
+                                          <Label alignment="CENTER" layoutX="-2.0" layoutY="12.0" prefHeight="18.0" prefWidth="558.0">
+                                             <font>
+                                                <Font name="Corbel" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Button fx:id="speakButton" layoutY="6.0" minWidth="53.0" mnemonicParsing="false" onAction="#speak" prefHeight="35.0" prefWidth="53.0" visible="false">
+                                             <graphic>
+                                                <ImageView fitHeight="25.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../AppIcon/Speaker_icon.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                       </children>
+                                    </Pane>
+                                    <Label fx:id="resultLable" alignment="TOP_LEFT" prefHeight="442.0" prefWidth="554.0" style="-fx-padding: 10px;" wrapText="true">
+                                       <font>
+                                          <Font name="Corbel" size="20.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </content>
+                        </ScrollPane>
+                     </items>
+                  </SplitPane>
+               </content>
+          </Tab>
+          <Tab text="Dịch câu trực tuyến">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </content>
           </Tab>
-          <Tab text="Dịch câu">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-            <Tab text="Mini game">
+            <Tab text="Từ điển của tôi">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
             </Tab>
-            <Tab text="Untitled Tab">
+            <Tab text="Mini game">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
             </Tab>
         </tabs>
       </TabPane>
-      <SplitPane dividerPositions="0.2593582887700534" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="527.0" prefWidth="755.0">
-         <items>
-            <ScrollPane hbarPolicy="NEVER" prefHeight="519.0" prefWidth="194.0" vbarPolicy="NEVER">
-               <content>
-                  <VBox prefHeight="524.0" prefWidth="196.0">
-                     <children>
-                        <MenuButton fx:id="languageMenuButton" mnemonicParsing="false" popupSide="LEFT" prefHeight="13.0" prefWidth="754.0" text="Tự động">
-                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish" text="Tiếng Anh" />
-                              <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese" text="Tiếng Việt" />
-                              <MenuItem mnemonicParsing="false" onAction="#switchLanguageToDefault" text="Tự động" />
-                           </items>
-                           <effect>
-                              <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
-                           </effect>
-                           <font>
-                              <Font name="Corbel" size="20.0" />
-                           </font>
-                        </MenuButton>
-                        <TextField prefHeight="45.0" prefWidth="754.0" promptText="Looking for smth?...">
-                           <font>
-                              <Font name="Corbel" size="12.0" />
-                           </font>
-                        </TextField>
-                        <Label alignment="TOP_LEFT" prefHeight="442.0" prefWidth="554.0" style="-fx-padding: 10px;" wrapText="true">
-                           <font>
-                              <Font name="Corbel" size="19.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
-               </content>
-            </ScrollPane>
-            <ScrollPane hbarPolicy="NEVER" prefHeight="536.0" prefWidth="558.0">
-               <content>
-                  <VBox prefHeight="527.0" prefWidth="554.0">
-                     <children>
-                        <Label alignment="CENTER" prefHeight="40.0" prefWidth="554.0">
-                           <font>
-                              <Font name="Corbel Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Pane prefHeight="46.0" prefWidth="554.0">
-                           <children>
-                              <ImageView fitHeight="31.0" fitWidth="29.0" layoutX="123.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../AppIcon/Speaker_icon.png" />
-                                 </image>
-                              </ImageView>
-                              <Label alignment="CENTER" layoutY="14.0" prefHeight="18.0" prefWidth="558.0">
-                                 <font>
-                                    <Font name="Corbel" size="20.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </Pane>
-                        <Label alignment="TOP_LEFT" prefHeight="442.0" prefWidth="554.0" style="-fx-padding: 10px;" wrapText="true">
-                           <font>
-                              <Font name="Corbel" size="19.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
-               </content>
-            </ScrollPane>
-         </items>
-      </SplitPane>
    </children>
 </VBox>
