--- a/src/Application/resources/FXML Files/FXML.fxml
+++ b/src/Application/resources/FXML Files/FXML.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -10,119 +11,112 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="756.0" stylesheets="@../CSS%20Styles/nord-dark.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.SceneController">
    <children>
-      <TabPane prefHeight="568.0" prefWidth="756.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Từ điển Anh-Việt">
+      <TabPane prefHeight="568.0" prefWidth="756.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+         <tabs>
+            <Tab text="Từ điển Anh-Việt">
                <content>
-                  <SplitPane fx:id="tab0SplitPane" dividerPositions="0.26187961985216474" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="527.0" prefWidth="757.0">
+                  <SplitPane fx:id="tab0SplitPane" dividerPositions="0.25081610446137104" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="510.0" prefWidth="745.0">
                      <items>
-                        <ScrollPane hbarPolicy="NEVER" prefHeight="522.0" prefWidth="195.0" vbarPolicy="NEVER">
-                           <content>
-                              <VBox prefHeight="513.0" prefWidth="196.0">
-                                 <children>
-                                    <MenuButton fx:id="languageMenuButton" layoutY="50.0" mnemonicParsing="false" popupSide="LEFT" prefHeight="13.0" prefWidth="754.0" text="Tiếng Anh">
-                                       <items>
-                                          <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish" text="Tiếng Anh" />
-                                          <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese" text="Tiếng Việt" />
-                                       </items>
-                                       <effect>
-                                          <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
-                                       </effect>
-                                       <font>
-                                          <Font name="Corbel" size="20.0" />
-                                       </font>
-                                    </MenuButton>
-                                    <TextField id="1" fx:id="tab0searchTextField" onAction="#translate" prefHeight="45.0" prefWidth="754.0" promptText="Looking for smth?...">
-                                       <font>
-                                          <Font name="Corbel" size="20.0" />
-                                       </font>
-                                    </TextField>
-                                    <ListView prefHeight="422.0" prefWidth="196.0" />
-                                 </children>
-                              </VBox>
-                           </content>
-                        </ScrollPane>
-                        <ScrollPane hbarPolicy="NEVER" prefHeight="536.0" prefWidth="558.0">
-                           <content>
-                              <VBox prefHeight="515.0" prefWidth="542.0" />
-                           </content>
-                        </ScrollPane>
-                     </items>
-                  </SplitPane>
-               </content>
-          </Tab>
-          <Tab text="Tra cứu định nghĩa">
-               <content>
-                  <SplitPane dividerPositions="0.2605596620908131" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="527.0" prefWidth="757.0">
-                     <items>
-                        <ScrollPane hbarPolicy="NEVER" prefHeight="527.0" prefWidth="340.0" vbarPolicy="NEVER">
-                           <content>
-                              <VBox prefHeight="524.0" prefWidth="196.0">
-                                 <children>
-                                    <MenuButton fx:id="languageMenuButton1" layoutY="50.0" mnemonicParsing="false" popupSide="LEFT" prefHeight="13.0" prefWidth="754.0" text="Tiếng Anh">
-                                       <items>
-                                          <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish" text="Tiếng Anh" />
-                                          <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese" text="Tiếng Việt" />
-                                       </items>
-                                       <effect>
-                                          <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
-                                       </effect>
-                                       <font>
-                                          <Font name="Corbel" size="20.0" />
-                                       </font>
-                                    </MenuButton>
-                                 </children>
-                              </VBox>
-                           </content>
-                        </ScrollPane>
-                        <ScrollPane hbarPolicy="NEVER" prefHeight="536.0" prefWidth="558.0">
-                           <content>
-                              <VBox prefHeight="527.0" prefWidth="554.0">
-                                 <children>
-                                 </children>
-                              </VBox>
-                           </content>
-                        </ScrollPane>
-                     </items>
-                  </SplitPane>
-               </content>
-               <content>
-                  <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0">
-                     <content>
-                        <VBox prefHeight="504.0" prefWidth="735.0">
+                        <VBox prefHeight="506.0" prefWidth="169.0">
                            <children>
-                              <TextField id="2" fx:id="tab1SearchTextField" alignment="CENTER" onAction="#define" prefWidth="754.0" promptText="Definitions?...">
+                              <MenuButton fx:id="languageMenuButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" popupSide="LEFT" prefHeight="39.0" prefWidth="1133.0" text="Tiếng Anh">
+                                 <items>
+                                    <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish" text="Tiếng Anh" />
+                                    <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese" text="Tiếng Việt" />
+                                 </items>
+                                 <effect>
+                                    <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
+                                 </effect>
                                  <font>
-                                    <Font name="Corbel" size="25.0" />
-                                 </font></TextField>
+                                    <Font name="Corbel" size="20.0" />
+                                 </font>
+                              </MenuButton>
+                              <TextField id="1" fx:id="tab0searchTextField" alignment="CENTER" onAction="#translate" prefHeight="47.0" prefWidth="190.0" promptText="Looking for smth?...">
+                                 <font>
+                                    <Font name="Corbel" size="20.0" />
+                                 </font>
+                              </TextField>
+                              <ListView fx:id="myListView" prefHeight="436.0" prefWidth="196.0" visible="false" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
-                     </content>
-                  </ScrollPane>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Button fx:id="tab0SpeakButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#speak" prefHeight="34.0" prefWidth="404.0" text="Phát âm" visible="false">
+                                 <graphic>
+                                    <ImageView fitHeight="32.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../AppIcon/Speaker_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <ScrollPane prefHeight="438.0" prefWidth="366.0" VBox.vgrow="ALWAYS">
+                                 <content>
+                                    <VBox prefHeight="469.0" prefWidth="364.0" />
+                                 </content>
+                              </ScrollPane>
+                           </children>
+                        </VBox>
+                     </items>
+                  </SplitPane>
                </content>
-          </Tab>
+            </Tab>
+            <Tab text="Tra cứu định nghĩa">
+               <content>
+                  <VBox>
+                     <children>
+                        <TextField id="2" fx:id="tab1SearchTextField" alignment="CENTER" onAction="#define" prefHeight="34.0" prefWidth="736.0" promptText="Definitions?...">
+                           <font>
+                              <Font name="Corbel" size="25.0" />
+                           </font>
+                        </TextField>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="34.0" prefWidth="735.0" text="Phát âm">
+                           <graphic>
+                              <ImageView fitHeight="32.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../AppIcon/Speaker_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <ScrollPane hbarPolicy="NEVER" prefHeight="433.0" prefWidth="735.0" VBox.vgrow="ALWAYS" />
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
             <Tab text="Dịch câu">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
+               <content>
+                  <VBox>
+                     <children>
+                        <TextField id="2" fx:id="tab1SearchTextField1" alignment="CENTER" onAction="#define" prefHeight="34.0" prefWidth="736.0" promptText="Translations?...">
+                           <font>
+                              <Font name="Corbel" size="25.0" />
+                           </font>
+                        </TextField>
+                        <ScrollPane hbarPolicy="NEVER" prefHeight="433.0" prefWidth="735.0" VBox.vgrow="ALWAYS" />
+                     </children>
+                  </VBox>
+               </content>
             </Tab>
             <Tab text="Từ điển của tôi">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
             </Tab>
             <Tab text="Mini game">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
             </Tab>
-        </tabs>
+         </tabs>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
