--- a/src/Application/resources/FXML Files/FXML.fxml
+++ b/src/Application/resources/FXML Files/FXML.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -25,16 +26,22 @@
    <children>
       <TabPane prefHeight="568.0" prefWidth="756.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
          <tabs>
-            <Tab text="Từ điển Anh-Việt">
+            <Tab>
                <content>
-                  <SplitPane fx:id="splitPane1" dividerPositions="0.25081610446137104" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="510.0" prefWidth="745.0">
+                  <SplitPane fx:id="splitPane1" dividerPositions="0.2834602829162133" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="510.0" prefWidth="745.0">
                      <items>
-                        <VBox focusTraversable="true" prefHeight="506.0" prefWidth="169.0">
+                        <VBox fx:id="leftVBoxTab1" focusTraversable="true" prefHeight="506.0" prefWidth="169.0">
                            <children>
                               <MenuButton fx:id="languageMenuButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" popupSide="LEFT" prefHeight="39.0" prefWidth="1133.0" text="Tiếng Anh">
                                  <items>
-                                    <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish" text="Tiếng Anh" />
-                                    <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese" text="Tiếng Việt" />
+                                    <MenuItem mnemonicParsing="false" onAction="#switchLanguageToEnglish">
+                                       <graphic>
+                                          <Label text="Tiếng Anh" />
+                                       </graphic></MenuItem>
+                                    <MenuItem mnemonicParsing="false" onAction="#switchLanguageToVietnamese">
+                                       <graphic>
+                                          <Label text="Tiếng Việt" />
+                                       </graphic></MenuItem>
                                  </items>
                                  <effect>
                                     <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
@@ -101,9 +108,9 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <ScrollPane fx:id="scrollPane1" prefHeight="438.0" prefWidth="366.0" VBox.vgrow="ALWAYS">
+                              <ScrollPane fx:id="scrollPane1" prefHeight="438.0" prefWidth="471.0" VBox.vgrow="ALWAYS">
                                  <content>
-                                    <VBox fx:id="tab0DefVbox" prefHeight="463.0" prefWidth="538.0" />
+                                    <VBox fx:id="tab0DefVbox" prefHeight="463.0" prefWidth="522.0" />
                                  </content>
                               </ScrollPane>
                            </children>
@@ -111,8 +118,11 @@
                      </items>
                   </SplitPane>
                </content>
+               <graphic>
+                  <Label fx:id="tabTitle1" text="Từ điển Anh-Việt" />
+               </graphic>
             </Tab>
-            <Tab text="Tra cứu định nghĩa">
+            <Tab>
                <content>
                   <VBox>
                      <children>
@@ -137,8 +147,11 @@
                      </children>
                   </VBox>
                </content>
+               <graphic>
+                  <Label fx:id="tabTitle2" text="Tra cứu định nghĩa" />
+               </graphic>
             </Tab>
-            <Tab text="Dịch câu">
+            <Tab>
                <content>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
@@ -146,8 +159,14 @@
                            <children>
                               <MenuButton fx:id="tab3LanguageMenuButton1" maxWidth="1.7976931348623157E308" mnemonicParsing="false" popupSide="LEFT" prefHeight="39.0" prefWidth="1133.0" text="Tiếng Anh">
                                  <items>
-                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToEnglish1" text="Tiếng Anh" />
-                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToVietnamese1" text="Tiếng Việt" />
+                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToEnglish1">
+                                       <graphic>
+                                          <Label text="Tiếng Anh" />
+                                       </graphic></MenuItem>
+                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToVietnamese1">
+                                       <graphic>
+                                          <Label text="Tiếng Việt" />
+                                       </graphic></MenuItem>
                                  </items>
                                  <effect>
                                     <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
@@ -168,7 +187,7 @@
                         </VBox>
                         <BorderPane minWidth="-Infinity" prefHeight="506.0" prefWidth="75.0">
                            <center>
-                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#phraseTranslate" prefHeight="34.0" prefWidth="65.0" text="Dịch" />
+                              <Button fx:id="translateButtonTab3" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#phraseTranslate" prefHeight="34.0" prefWidth="65.0" text="Dịch" />
                            </center>
                            <top>
                               <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#switchSides" prefHeight="39.0" prefWidth="65.0" BorderPane.alignment="CENTER">
@@ -186,8 +205,14 @@
                            <children>
                               <MenuButton fx:id="tab3LanguageMenuButton2" maxWidth="1.7976931348623157E308" mnemonicParsing="false" popupSide="RIGHT" prefHeight="39.0" prefWidth="1133.0" text="Tiếng Việt">
                                  <items>
-                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToEnglish2" text="Tiếng Anh" />
-                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToVietnamese2" text="Tiếng Việt" />
+                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToEnglish2">
+                                       <graphic>
+                                          <Label text="Tiếng Anh" />
+                                       </graphic></MenuItem>
+                                    <MenuItem mnemonicParsing="false" onAction="#switchPLanguageToVietnamese2">
+                                       <graphic>
+                                          <Label text="Tiếng Việt" />
+                                       </graphic></MenuItem>
                                  </items>
                                  <effect>
                                     <ColorAdjust brightness="-0.02" contrast="0.32" hue="-0.2" saturation="1.0" />
@@ -209,8 +234,11 @@
                      </children>
                   </HBox>
                </content>
+               <graphic>
+                  <Label fx:id="tabTitle3" text="Dịch câu" />
+               </graphic>
             </Tab>
-            <Tab text="Từ điển của tôi">
+            <Tab>
                <content>
                   <ScrollPane fx:id="scrollPane3" prefHeight="200.0" prefWidth="200.0">
                      <content>
@@ -231,8 +259,11 @@
                      </content>
                   </ScrollPane>
                </content>
+               <graphic>
+                  <Label fx:id="tabTitle4" text="Từ điển của tôi" />
+               </graphic>
             </Tab>
-            <Tab text="Mini game">
+            <Tab>
                <content>
                </content>
                <content>
@@ -242,6 +273,9 @@
                      </center>
                   </BorderPane>
                </content>
+               <graphic>
+                  <Label fx:id="tabTitle5" text="Mini game" />
+               </graphic>
             </Tab>
          </tabs>
          <VBox.margin>
