--- a/src/Application/resources/FXML Files/FXML.fxml
+++ b/src/Application/resources/FXML Files/FXML.fxml
@@ -18,7 +18,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -263,15 +262,8 @@
                   <Label fx:id="tabTitle4" text="Từ điển của tôi" />
                </graphic>
             </Tab>
-            <Tab>
+            <Tab fx:id="tab5">
                <content>
-               </content>
-               <content>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0">
-                     <center>
-                        <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-                     </center>
-                  </BorderPane>
                </content>
                <graphic>
                   <Label fx:id="tabTitle5" text="Mini game" />
