--- a/src/Application/resources/FXML Files/GameTest.fxml
+++ b/src/Application/resources/FXML Files/GameTest.fxml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.media.MediaView?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<StackPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Application.java.GameController">
+   <children>
+      <FlowPane alignment="TOP_RIGHT">
+         <children>
+            <MediaView fx:id="timerMediaView" fitHeight="100.0" fitWidth="100.0" />
+         </children>
+      </FlowPane>
+      <VBox prefHeight="402.0" prefWidth="600.0">
+         <children>
+            <FlowPane alignment="CENTER" prefHeight="234.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <Label fx:id="questionLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="122.0" prefWidth="436.0" text="Who is the most handsome person on earth?" textAlignment="JUSTIFY" wrapText="true" />
+               </children>
+            </FlowPane>
+            <HBox prefHeight="60.0" prefWidth="462.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <Button fx:id="answerButton1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="102.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="answerButton2" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="102.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="answerButton3" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="174.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="answerButton4" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="201.0" prefWidth="110.0" textAlignment="JUSTIFY" wrapText="true" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="60.0" right="60.0" top="20.0" />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
+</StackPane>
